# CWebServer

./: .gitignore  CMakeLists.txt  todolist.md
.cache/clangd/index/: main.c.91BA57C5A855C522.idx
src/: CMakeLists.txt  main.c
src/http/: CMakeLists.txt  cookie.c  cookie.h  headers.c  headers.h  request.c  request.h  response.c  response.h  response_codes.c  response_codes.h  socket.h  verb.c  verb.h  version.c  version.h
src/http/socket/: socket_linux.c  socket_linux.h
src/tests/: CMakeLists.txt  framework.c  framework.h
src/utils/: CMakeLists.txt  Errors.c  Errors.h  Hashmap.c  Hashmap.h  Optional.c  Optional.h  Vector.c  Vector.h  cleanup.c  cleanup.h  string.c  string.h
